fix(ServerChatScroll): (SA-212) Media Chat scroll bar missing while viewing in a different server (#198)
* fix(ServerChatScroll): (SA-212) Media Chat scroll bar missing while viewing in a different server

* fix chat scroll

* fix(SearchResultCursor): (SA-222) Curser doesn't change over order items  in the Search Results

* fix(MarketPlaceScroll): SA-232 Scrollbar in marketplace is sitting in front of product cover photos

--- a/components/interactables/Search/Result/Result.less
+++ b/components/interactables/Search/Result/Result.less
@@ -106,6 +106,7 @@
     .result-orderby {
       display: flex;
       .orderby-item {
+        cursor: pointer;
         padding: 2px 8px;
         &.active {
           font-weight: bold;
